@@ -1,17 +1,0 @@
-Copy stdin to stdout and stderr, unbuffered
-# The next line must be empty
-
-Often `tee` fails, as this command does it buffered.
-
-This here is a really easy program to do it unbuffered.
-Use it like this:
-<pre>producer | unbuffered 2>>file | consumer</pre>
-
-Now you can do also something like:
-<pre>producer | unbuffered -cp 'prefix ' | consumer</pre>
-
-There are options like '-x' to do a hexdump.
-Also you can give a 'line prefix' to prepend.
-And there is timestamping.
-
-All you need to do your debugging, quick and dirty.
